add new content

--- a/srishtinohar.html
+++ b/srishtinohar.html
@@ -38,7 +38,7 @@
             <a class="nav-link" href="#">Previous Year Sample Papers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Student</a>
+            <a class="nav-link" href="#">Student Corner</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
