--- a/srishtinohar.html
+++ b/srishtinohar.html
@@ -48,7 +48,7 @@
               <li><a class="dropdown-item" href="#">Hindi</a></li>
               <li><a class="dropdown-item" href="#">English</a></li>
               <li>
-                <a class="dropdown-item" href="#">Achivements</a>
+                <a class="dropdown-item" href="#">Achivements And Offers</a>
               </li>
             </ul>
           </li>
